--- a/SoulEngine.csproj
+++ b/SoulEngine.csproj
@@ -57,6 +57,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\Engine\Libraries\Settings.cs" />
     <Compile Include="src\Engine\Objects\Effects\Effect.cs" />
     <Compile Include="src\Engine\Objects\Event.cs" />
     <Compile Include="src\User\Screens\StartScreen.cs" />
@@ -96,7 +97,6 @@
     <Compile Include="src\Engine\Libraries\External\TiledSharp\zlib\ZlibConstants.cs" />
     <Compile Include="src\Engine\Libraries\External\TiledSharp\zlib\ZlibStream.cs" />
     <Compile Include="src\Engine\Libraries\Input.cs" />
-    <Compile Include="src\Engine\Libraries\Soul\Log\Log.cs" />
     <Compile Include="src\Engine\Objects\Animation.cs" />
     <Compile Include="src\Engine\Objects\Effects\Fade.cs" />
     <Compile Include="src\Engine\Objects\Effects\Move.cs" />
@@ -129,7 +129,6 @@
     <Content Include="SoulEngine.ico" />
     <Content Include="src\Engine\Libraries\External\TiledSharp\zlib\License.txt" />
     <Content Include="src\Engine\Libraries\External\TiledSharp\zlib\License.zlib.txt" />
-    <Content Include="src\Engine\Libraries\Soul\Log\Log Documentation.txt" />
   </ItemGroup>
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
