--- a/SoulEngine.csproj
+++ b/SoulEngine.csproj
@@ -59,7 +59,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\Engine\Libraries\Settings.cs" />
     <Compile Include="src\Engine\Objects\Effects\Effect.cs" />
-    <Compile Include="src\Engine\Objects\Event.cs" />
+    <Compile Include="src\Engine\Objects\Internal\Event.cs" />
     <Compile Include="src\User\Screens\StartScreen.cs" />
     <Compile Include="src\User\Settings.cs" />
     <Compile Include="src\Engine\Core\Core.cs" />
