--- a/SoulEngine.csproj
+++ b/SoulEngine.csproj
@@ -57,8 +57,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\Engine\Objects\Event.cs" />
-    <Compile Include="src\User\Screens\MasterScreen.cs" />
+    <Compile Include="src\Engine\Libraries\Settings.cs" />
+    <Compile Include="src\Engine\Objects\Effects\Effect.cs" />
+    <Compile Include="src\Engine\Objects\Internal\Event.cs" />
+    <Compile Include="src\User\Screens\StartScreen.cs" />
     <Compile Include="src\User\Settings.cs" />
     <Compile Include="src\Engine\Core\Core.cs" />
     <Compile Include="src\Engine\Core\Engine.cs" />
@@ -95,7 +97,6 @@
     <Compile Include="src\Engine\Libraries\External\TiledSharp\zlib\ZlibConstants.cs" />
     <Compile Include="src\Engine\Libraries\External\TiledSharp\zlib\ZlibStream.cs" />
     <Compile Include="src\Engine\Libraries\Input.cs" />
-    <Compile Include="src\Engine\Libraries\Soul\Log\Log.cs" />
     <Compile Include="src\Engine\Objects\Animation.cs" />
     <Compile Include="src\Engine\Objects\Effects\Fade.cs" />
     <Compile Include="src\Engine\Objects\Effects\Move.cs" />
@@ -103,13 +104,12 @@
     <Compile Include="src\Engine\Objects\Effects\Wait.cs" />
     <Compile Include="src\Engine\Objects\Map.cs" />
     <Compile Include="src\Engine\Objects\ObjectBase.cs" />
-    <Compile Include="src\Engine\Objects\ScreenObjectBase.cs" />
+    <Compile Include="src\Engine\Objects\Screen.cs" />
     <Compile Include="src\Engine\Objects\Sound.cs" />
     <Compile Include="src\Engine\Objects\TextObject.cs" />
     <Compile Include="src\Engine\Objects\Texture.cs" />
     <Compile Include="src\Engine\Objects\Timer.cs" />
     <Compile Include="src\Engine\Objects\UIObjectBase.cs" />
-    <Compile Include="src\Engine\Templates\Screen.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="OpenTK">
@@ -129,7 +129,6 @@
     <Content Include="SoulEngine.ico" />
     <Content Include="src\Engine\Libraries\External\TiledSharp\zlib\License.txt" />
     <Content Include="src\Engine\Libraries\External\TiledSharp\zlib\License.zlib.txt" />
-    <Content Include="src\Engine\Libraries\Soul\Log\Log Documentation.txt" />
   </ItemGroup>
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
