--- a/SoulEngine.csproj
+++ b/SoulEngine.csproj
@@ -57,6 +57,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\Engine\Libraries\IO.cs" />
     <Compile Include="src\Engine\Libraries\Settings.cs" />
     <Compile Include="src\Engine\Objects\Effects\Effect.cs" />
     <Compile Include="src\Engine\Objects\Internal\Event.cs" />
