--- a/SoulEngine.csproj
+++ b/SoulEngine.csproj
@@ -59,7 +59,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\Engine\Libraries\Settings.cs" />
     <Compile Include="src\Engine\Libraries\Soul_Extension.cs" />
-    <Compile Include="src\Engine\Libraries\Soul.cs" />
     <Compile Include="src\Engine\Objects\Effects\Effect.cs" />
     <Compile Include="src\Engine\Objects\Internal\Event.cs" />
     <Compile Include="src\User\Screens\StartScreen.cs" />
@@ -122,6 +121,9 @@
     </Reference>
     <Reference Include="MonoGame.Framework">
       <HintPath>$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\MonoGame.Framework.dll</HintPath>
+    </Reference>
+    <Reference Include="SoulLib">
+      <HintPath>..\SoulLib\SoulLib\bin\Debug\SoulLib.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
