--- a/SoulEngine.csproj
+++ b/SoulEngine.csproj
@@ -57,7 +57,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\Engine\Libraries\PhysicsHelper.cs" />
+    <Compile Include="src\Engine\Core\PhysicsEngine.cs" />
     <Compile Include="src\Engine\Libraries\Physics\Collision\Collision.cs" />
     <Compile Include="src\Engine\Libraries\Physics\Collision\Distance.cs" />
     <Compile Include="src\Engine\Libraries\Physics\Collision\DynamicTree.cs" />
@@ -178,6 +178,7 @@
     <Compile Include="src\Engine\Libraries\Physics\Settings.cs" />
     <Compile Include="src\Engine\Libraries\Settings.cs" />
     <Compile Include="src\Engine\Libraries\Soul_Extension.cs" />
+    <Compile Include="src\Engine\Libraries\Extensions.cs" />
     <Compile Include="src\Engine\Objects\Effects\Effect.cs" />
     <Compile Include="src\Engine\Objects\Internal\Event.cs" />
     <Compile Include="src\Engine\Objects\PhysicsObject.cs" />
@@ -272,7 +273,6 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup />
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
