--- a/SoulEngine.csproj
+++ b/SoulEngine.csproj
@@ -53,10 +53,16 @@
     <ApplicationIcon>SoulEngine.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>SoulEngine.Program</StartupObject>
+    <StartupObject>SoulEngine.Starter</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\Engine\Core\AssetManager.cs" />
+    <Compile Include="src\Engine\Core\Assets.cs" />
+    <Compile Include="src\Engine\Core\Context.cs" />
+    <Compile Include="src\Engine\Core\Enums.cs" />
+    <Compile Include="src\Engine\Core\Functions.cs" />
+    <Compile Include="src\Engine\Core\Info.cs" />
     <Compile Include="src\Engine\Core\PhysicsEngine.cs" />
     <Compile Include="src\Engine\Libraries\Physics\Collision\Collision.cs" />
     <Compile Include="src\Engine\Libraries\Physics\Collision\Distance.cs" />
@@ -178,14 +184,13 @@
     <Compile Include="src\Engine\Libraries\Physics\Settings.cs" />
     <Compile Include="src\Engine\Libraries\Settings.cs" />
     <Compile Include="src\Engine\Libraries\Extensions.cs" />
-    <Compile Include="src\Engine\Objects\Effects\Effect.cs" />
     <Compile Include="src\Engine\Objects\Internal\Event.cs" />
     <Compile Include="src\Engine\Objects\PhysicsObject.cs" />
     <Compile Include="src\User\Screens\StartScreen.cs" />
     <Compile Include="src\User\Settings.cs" />
     <Compile Include="src\Engine\Core\Core.cs" />
     <Compile Include="src\Engine\Core\Engine.cs" />
-    <Compile Include="src\Engine\Core\Start.cs" />
+    <Compile Include="src\Engine\Core\Starter.cs" />
     <Compile Include="src\Engine\Libraries\Content.cs" />
     <Compile Include="src\Engine\Libraries\External\MG.Ext\BoxingViewportAdapter.cs" />
     <Compile Include="src\Engine\Libraries\External\MG.Ext\Camera2D.cs" />
@@ -220,7 +225,6 @@
     <Compile Include="src\Engine\Libraries\Input.cs" />
     <Compile Include="src\Engine\Objects\Animation.cs" />
     <Compile Include="src\Engine\Objects\Effects\Fade.cs" />
-    <Compile Include="src\Engine\Objects\Effects\Move.cs" />
     <Compile Include="src\Engine\Objects\Effects\Scale.cs" />
     <Compile Include="src\Engine\Objects\Effects\Wait.cs" />
     <Compile Include="src\Engine\Objects\Map.cs" />
@@ -257,9 +261,6 @@
     <Content Include="src\Engine\Libraries\SoulLib.dll" />
   </ItemGroup>
   <ItemGroup>
-    <MonoGameContentReference Include="Content\Content.mgcb" />
-  </ItemGroup>
-  <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5">
       <Visible>False</Visible>
       <ProductName>Microsoft .NET Framework 4.5 %28x86 and x64%29</ProductName>
@@ -271,11 +272,16 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Content\SNCon\" />
+    <None Include="Content\ContentBuilder.mgcb" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>
+    </PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
