--- a/SoulEngine.csproj
+++ b/SoulEngine.csproj
@@ -57,6 +57,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\Engine\Components\Component.cs" />
+    <Compile Include="src\Engine\Components\Transform.cs" />
     <Compile Include="src\Engine\Core\AssetManager.cs" />
     <Compile Include="src\Engine\Core\Assets.cs" />
     <Compile Include="src\Engine\Core\Context.cs" />
@@ -67,7 +69,7 @@
     <Compile Include="src\Engine\Objects\Internal\ActiveTexture.cs" />
     <Compile Include="src\Engine\Objects\Main\Scene.cs" />
     <Compile Include="src\Engine\Objects\GameObjectBase.cs" />
-    <Compile Include="src\Engine\Objects\ObjectBase.cs" />
+    <Compile Include="src\Engine\Core\GameObject.cs" />
     <None Include="src\Legacy\PhysicsEngine.cs" />
     <Compile Include="src\Engine\Libraries\Physics\Collision\Collision.cs" />
     <Compile Include="src\Engine\Libraries\Physics\Collision\Distance.cs" />
