--- a/SoulEngine.csproj
+++ b/SoulEngine.csproj
@@ -57,6 +57,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\Engine\Core\Tools\Meter.cs" />
     <Compile Include="src\Engine\Objects\Components\Component.cs" />
     <Compile Include="src\Engine\Objects\Components\Renderer.cs" />
     <Compile Include="src\Engine\Objects\Components\Transform.cs" />
@@ -67,7 +68,7 @@
     <Compile Include="src\Engine\Core\Functions.cs" />
     <Compile Include="src\Engine\Meta\Info.cs" />
     <Compile Include="src\Engine\Objects\Trigger.cs" />
-    <Compile Include="src\Engine\Objects\ActiveTexture.cs" />
+    <Compile Include="src\Engine\Objects\Components\ActiveTexture.cs" />
     <Compile Include="src\Engine\Objects\Scene.cs" />
     <Compile Include="src\Engine\Objects\GameObject.cs" />
     <Compile Include="src\Engine\Libraries\Physics\Collision\Collision.cs" />
