--- a/SoulEngine.csproj
+++ b/SoulEngine.csproj
@@ -58,6 +58,8 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\Engine\Core\Tools\Meter.cs" />
+    <Compile Include="src\Engine\Triggers\TriggerType.cs" />
+    <Compile Include="src\Engine\Triggers\TriggerSystem.cs" />
     <Compile Include="src\Engine\Objects\Components\Component.cs" />
     <Compile Include="src\Engine\Objects\Components\Renderer.cs" />
     <Compile Include="src\Engine\Objects\Components\Transform.cs" />
@@ -67,7 +69,7 @@
     <Compile Include="src\Engine\Core\Enums.cs" />
     <Compile Include="src\Engine\Core\Functions.cs" />
     <Compile Include="src\Engine\Meta\Info.cs" />
-    <Compile Include="src\Engine\Objects\Trigger.cs" />
+    <Compile Include="src\Engine\Triggers\Trigger.cs" />
     <Compile Include="src\Engine\Objects\Components\ActiveTexture.cs" />
     <Compile Include="src\Engine\Objects\Scene.cs" />
     <Compile Include="src\Engine\Objects\GameObject.cs" />
