--- a/SoulEngine.csproj
+++ b/SoulEngine.csproj
@@ -57,18 +57,22 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\Engine\Components\Transform.cs" />
+    <Compile Include="src\Engine\Core\Tools\Meter.cs" />
+    <Compile Include="src\Engine\Triggers\TriggerType.cs" />
+    <Compile Include="src\Engine\Triggers\TriggerSystem.cs" />
+    <Compile Include="src\Engine\Objects\Components\Component.cs" />
+    <Compile Include="src\Engine\Objects\Components\Renderer.cs" />
+    <Compile Include="src\Engine\Objects\Components\Transform.cs" />
     <Compile Include="src\Engine\Core\AssetManager.cs" />
     <Compile Include="src\Engine\Core\Assets.cs" />
     <Compile Include="src\Engine\Core\Context.cs" />
     <Compile Include="src\Engine\Core\Enums.cs" />
     <Compile Include="src\Engine\Core\Functions.cs" />
     <Compile Include="src\Engine\Meta\Info.cs" />
-    <Compile Include="src\Engine\Objects\Trigger.cs" />
-    <Compile Include="src\Engine\Objects\ActiveTexture.cs" />
+    <Compile Include="src\Engine\Triggers\Trigger.cs" />
+    <Compile Include="src\Engine\Objects\Components\ActiveTexture.cs" />
     <Compile Include="src\Engine\Objects\Scene.cs" />
-    <Compile Include="src\Engine\Core\GameObject.cs" />
-    <None Include="src\Legacy\PhysicsEngine.cs" />
+    <Compile Include="src\Engine\Objects\GameObject.cs" />
     <Compile Include="src\Engine\Libraries\Physics\Collision\Collision.cs" />
     <Compile Include="src\Engine\Libraries\Physics\Collision\Distance.cs" />
     <Compile Include="src\Engine\Libraries\Physics\Collision\DynamicTree.cs" />
@@ -189,15 +193,11 @@
     <Compile Include="src\Engine\Libraries\Physics\Settings.cs" />
     <Compile Include="src\Engine\Libraries\Settings.cs" />
     <Compile Include="src\Engine\Libraries\Extensions.cs" />
-    <None Include="src\Legacy\Internal\Event.cs" />
-    <None Include="src\Legacy\PhysicsObject.cs" />
     <None Include="src\User\Screens\StartScreen.cs" />
     <Compile Include="src\Engine\Objects\Ticker.cs" />
     <Compile Include="src\User\Settings.cs" />
-    <None Include="src\Legacy\Core.cs" />
     <Compile Include="src\Engine\Core\Core.cs" />
     <Compile Include="src\Engine\Core\Starter.cs" />
-    <Compile Include="src\Legacy\Content.cs" />
     <Compile Include="src\Engine\Libraries\External\MG.Ext\BoxingViewportAdapter.cs" />
     <Compile Include="src\Engine\Libraries\External\MG.Ext\Camera2D.cs" />
     <Compile Include="src\Engine\Libraries\External\MG.Ext\DefaultViewportAdapter.cs" />
@@ -229,18 +229,6 @@
     <Compile Include="src\Engine\Libraries\External\TiledSharp\zlib\ZlibConstants.cs" />
     <Compile Include="src\Engine\Libraries\External\TiledSharp\zlib\ZlibStream.cs" />
     <Compile Include="src\Engine\Libraries\Input.cs" />
-    <None Include="src\Legacy\Animation.cs" />
-    <None Include="src\Legacy\Effects\Fade.cs" />
-    <None Include="src\Legacy\Effects\Scale.cs" />
-    <None Include="src\Legacy\Effects\Wait.cs" />
-    <None Include="src\Legacy\Map.cs" />
-    <None Include="src\Legacy\ObjectBase.cs" />
-    <None Include="src\Legacy\Screen.cs" />
-    <None Include="src\Legacy\Sound.cs" />
-    <None Include="src\Legacy\TextObject.cs" />
-    <None Include="src\Legacy\Texture.cs" />
-    <None Include="src\Legacy\Timer.cs" />
-    <None Include="src\Legacy\UIObjectBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="OpenTK">
@@ -280,7 +268,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <None Include="Content\ContentBuilder.mgcb" />
+    <MonoGameContentReference Include="Content\ContentBuilder.mgcb" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
