--- a/SoulEngine.csproj
+++ b/SoulEngine.csproj
@@ -66,7 +66,7 @@
     <Compile Include="src\Engine\Objects\ViewObjects\Camera.cs" />
     <Compile Include="src\Engine\Objects\Components\Component.cs" />
     <Compile Include="src\Engine\Objects\Components\Renderer.cs" />
-    <Compile Include="src\Engine\Objects\Components\Text.cs" />
+    <Compile Include="src\Engine\Objects\Components\АctiveText.cs" />
     <Compile Include="src\Engine\Core\AssetManager.cs" />
     <Compile Include="src\Engine\Core\Assets.cs" />
     <Compile Include="src\Engine\Core\Context.cs" />
