--- a/SoulEngine.csproj
+++ b/SoulEngine.csproj
@@ -61,6 +61,10 @@
     <Compile Include="src\Engine\Events\Listen.cs" />
     <Compile Include="src\Engine\Events\EType.cs" />
     <Compile Include="src\Engine\Events\ESystem.cs" />
+    <Compile Include="src\Engine\Objects\Components\Helpers\CharData.cs" />
+    <Compile Include="src\Engine\Objects\Components\Helpers\Tag.cs" />
+    <Compile Include="src\Engine\Objects\Components\Helpers\TagFactory.cs" />
+    <Compile Include="src\Engine\Objects\Components\Helpers\Tags\Bracket.cs" />
     <Compile Include="src\Engine\Objects\Components\Transform.cs" />
     <Compile Include="src\Engine\Objects\ViewObjects\ScreenAdapter.cs" />
     <Compile Include="src\Engine\Objects\ViewObjects\Camera.cs" />
@@ -77,124 +81,6 @@
     <Compile Include="src\Engine\Objects\Components\ActiveTexture.cs" />
     <Compile Include="src\Engine\Objects\Scene.cs" />
     <Compile Include="src\Engine\Objects\GameObject.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Collision\Collision.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Collision\Distance.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Collision\DynamicTree.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Collision\DynamicTreeBroadPhase.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Collision\IBroadPhase.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Collision\Shapes\ChainShape.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Collision\Shapes\CircleShape.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Collision\Shapes\EdgeShape.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Collision\Shapes\PolygonShape.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Collision\Shapes\Shape.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Collision\TimeOfImpact.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\ConvexHull\ChainHull.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\ConvexHull\GiftWrap.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\ConvexHull\Melkman.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Curve.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\CurveKey.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\CurveKeyCollection.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\BayazitDecomposer.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\CDTDecomposer.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\CDT\Delaunay\DelaunayTriangle.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\CDT\Delaunay\Sweep\AdvancingFront.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\CDT\Delaunay\Sweep\AdvancingFrontNode.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\CDT\Delaunay\Sweep\DTSweep.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\CDT\Delaunay\Sweep\DTSweepConstraint.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\CDT\Delaunay\Sweep\DTSweepContext.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\CDT\Delaunay\Sweep\DTSweepPointComparator.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\CDT\Delaunay\Sweep\PointOnEdgeException.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\CDT\ITriangulatable.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\CDT\Orientation.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\CDT\Polygon\Polygon.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\CDT\Polygon\PolygonPoint.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\CDT\Polygon\PolygonSet.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\CDT\Sets\ConstrainedPointSet.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\CDT\Sets\PointSet.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\CDT\TriangulationConstraint.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\CDT\TriangulationContext.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\CDT\TriangulationMode.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\CDT\TriangulationPoint.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\CDT\TriangulationUtil.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\CDT\Util\FixedArray3.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\CDT\Util\FixedBitArray3.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\CDT\Util\PointGenerator.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\CDT\Util\PolygonGenerator.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\EarclipDecomposer.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\FlipcodeDecomposer.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\SeidelDecomposer.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\Seidel\Edge.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\Seidel\MonotoneMountain.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\Seidel\Node.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\Seidel\Point.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\Seidel\QueryGraph.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\Seidel\Sink.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\Seidel\Trapezoid.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\Seidel\TrapezoidalMap.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\Seidel\Triangulator.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\Seidel\XNode.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\Seidel\YNode.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Decomposition\Triangulate.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\FixedArray.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\HashSet.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\LineTools.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Math.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\MathHelper.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Path.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\PathManager.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\PhysicsLogic\FilterData.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\PhysicsLogic\PhysicsLogic.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\PhysicsLogic\RealExplosion.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\PhysicsLogic\SimpleExplosion.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Vector2.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Vector3.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\PolygonManipulation\CuttingTools.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\PolygonManipulation\SimpleCombiner.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\PolygonManipulation\SimplifyTools.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\PolygonManipulation\YuPengClipper.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\PolygonTools.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Serialization.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Stopwatch.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\TextureTools\MarchingSquares.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\TextureTools\Terrain.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\TextureTools\TextureConverter.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Common\Vertices.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Controllers\AbstractForceController.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Controllers\BuoyancyController.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Controllers\Controller.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Controllers\GravityController.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Controllers\SimpleWindForce.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Controllers\VelocityLimitController.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\ConvertUnits.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\DebugViewBase.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Dynamics\Body.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Dynamics\BreakableBody.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Dynamics\ContactManager.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Dynamics\Contacts\Contact.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Dynamics\Contacts\ContactSolver.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Dynamics\Fixture.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Dynamics\Island.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Dynamics\Joints\AngleJoint.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Dynamics\Joints\DistanceJoint.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Dynamics\Joints\FixedMouseJoint.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Dynamics\Joints\FrictionJoint.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Dynamics\Joints\GearJoint.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Dynamics\Joints\Joint.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Dynamics\Joints\MotorJoint.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Dynamics\Joints\PrismaticJoint.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Dynamics\Joints\PulleyJoint.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Dynamics\Joints\RevoluteJoint.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Dynamics\Joints\RopeJoint.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Dynamics\Joints\WeldJoint.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Dynamics\Joints\WheelJoint.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Dynamics\TimeStep.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Dynamics\World.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Dynamics\WorldCallbacks.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Factories\BodyFactory.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Factories\FixtureFactory.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Factories\JointFactory.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Factories\LinkFactory.cs" />
-    <Compile Include="src\Engine\Libraries\External\Physics\Settings.cs" />
     <Compile Include="src\Engine\Libraries\Settings.cs" />
     <Compile Include="src\User\Scenes\ScenePrim.cs" />
     <Compile Include="src\Engine\Objects\Ticker.cs" />
