--- a/docs-source/package.json
+++ b/docs-source/package.json
@@ -27,6 +27,9 @@
     "react-addons-css-transition-group": "^15.4.2",
     "react-addons-transition-group": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-highlight": "^0.9.0",
+    "react-responsive-sidebar": "^0.1.16",
+    "react-router": "^3.0.2",
     "reactstrap": "^4.2.0"
   },
   "scripts": {
