--- a/docs-source/package.json
+++ b/docs-source/package.json
@@ -22,7 +22,7 @@
     "react-scripts": "0.9.5"
   },
   "dependencies": {
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.0.0-alpha.6",
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
     "react-addons-transition-group": "^15.4.2",
