SE 2017 1 - ES Fixes
Added a ViewObject base class with conversion functions.
- Result of this: ScreenAdapter now has point conversion functions.
Added a DistanceTo(Transform) function to the Transform component.
Added a MouseInput component.
- Added events for it.
Fixed assets not being loaded in the scene's assets.
Memory optimizations.
Reworked the way scene's are loaded.
- Context.Core.LoadScene()
Fixed mouse position being reported wrong.
Added "bounds" to game object properties.
Scene object now exposes objects attached to it as a read-only property.

--- a/SoulEngine.csproj
+++ b/SoulEngine.csproj
@@ -108,6 +108,7 @@
     <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\Tags\Color.cs" />
     <Compile Include="src\Engine\Objects\Components\Helpers\TiledMap\TileData.cs" />
     <Compile Include="src\Engine\Objects\Components\Helpers\TiledMap\TileObject.cs" />
+    <Compile Include="src\Engine\Objects\Components\MouseInput.cs" />
     <Compile Include="src\Engine\Objects\Components\TiledMap.cs" />
     <Compile Include="src\Engine\Objects\Components\Transform.cs" />
     <Compile Include="src\Engine\Objects\Components\АctiveText.cs" />
@@ -116,6 +117,7 @@
     <Compile Include="src\Engine\Objects\Ticker.cs" />
     <Compile Include="src\Engine\Objects\ViewObjects\Camera.cs" />
     <Compile Include="src\Engine\Objects\ViewObjects\ScreenAdapter.cs" />
+    <Compile Include="src\Engine\Objects\ViewObjects\ViewObject.cs" />
     <Compile Include="src\Legacy\Engine\Core.cs" />
     <Compile Include="src\Legacy\Engine\Engine.cs" />
     <Compile Include="src\Legacy\Objects\Event.cs" />
